Refactor index.html with new title and styles
Updated the HTML structure and styles, changed the title to '星漫旅站', and added Tailwind CSS for styling. Enhanced the form functionality by including password and expiry options.

--- a/index.html
+++ b/index.html
@@ -1,277 +1,217 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="asset/img/favicon.png"  >
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>short</title>
-    <style>
-      :root {
-        --color-primary: #5c7cfa;
-        --color-primary-dark: #4263eb;
-        --color-primary-alpha: #5c7cfa50;
 
-        --body-color: #495057;
-        --body-bg: #f8f9fa;
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" href="asset/img/favicon.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>星漫旅站</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.16/dist/tailwind.min.css">
+  <style>
+    body {
+      background: url('https://i0.wp.com/wangwangit001.cachefly.net/wangwangit/image/master/img/%E6%B5%8B%E8%AF%952.jpg') center/cover fixed;
+      /* 设置背景图片 */
+      font-family: 'Arial', sans-serif;
+      /* 设置默认字体 */
+      color: #333;
+      /* 设置默认文本颜色 */
+    }
 
-        --border-color: #dee2e6;
-      }
+    main {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      min-height: calc(100vh - 8rem);
+      text-align: center;
+    }
 
-      body {
-        max-width: 30rem;
-        margin-left: auto;
-        margin-right: auto;
-        padding-left: 2rem;
-        padding-right: 2rem;
-        color: var(--body-color);
-        background: var(--body-bg);
-        font-family: system-ui, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
-        line-height: 1.5;
-        -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-        text-rendering: optimizelegibility;
-        -webkit-font-smoothing: antialiased;
-      }
+    .container {
+      background-color: rgba(255, 255, 255, 0.8);
+      /* 设置容器背景颜色及透明度 */
+      border-radius: 10px;
+      padding: 40px;
+      box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
+      /* 添加阴影 */
+      max-width: 600px;
+    }
 
-      a {
-        color: var(--color-primary);
-        text-decoration: none;
-        transition: color .3s;
-      }
+    input:focus {
+      outline: none;
+      box-shadow: 0 0 0 3px rgba(34, 197, 94, 0.5);
+      /* 绿色聚焦效果 */
+    }
 
-      a:hover {
-        color: var(--color-primary);
-        text-decoration: underline;
-      }
+    button {
+      background-color: #22c55e;
+      /* 绿色按钮 */
+      color: white;
+      transition: background-color 0.3s ease;
+    }
 
-      h1 {
-        font-size: 5rem;
-        font-weight: 300;
-        text-align: center;
-        opacity: .2;
-      }
+    button:hover {
+      background-color: #16a34a;
+      /* 深绿色悬停效果 */
+    }
 
-      main[x-cloak] {
-        opacity: 0;
-      }
+    footer {
+      background-color: rgba(255, 255, 255, 0.9);
+      /* 设置页脚背景颜色及透明度 */
+      padding: 20px;
+      text-align: center;
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.1);
+      /* 添加顶部阴影 */
+    }
 
-      main:not([x-cloak]) {
-        opacity: 1;
-        transition: opacity .3s;
-      }
+    h1 {
+      font-size: 3em;
+      /* 加大标题字体 */
+      font-weight: 700;
+      /* 设置标题字体粗细 */
+      margin-bottom: 20px;
+      color: #22c55e;
+      /* 设置标题颜色 */
+    }
 
-      input {
-        -webkit-appearance: none;
-        appearance: none;
-        display: block;
-        width: 100%;
-        padding: .5rem 1rem;
-        border: 1px solid var(--border-color);
-        border-radius: .25rem;
-        box-sizing: border-box;
-        color: #33404d;
-        line-height: inherit;
-        font-size: 1rem;
-        transition: border .3s, box-shadow .3s;
-      }
+    .success,
+    .error {
+      padding: 10px 20px;
+      border-radius: 5px;
+      margin-bottom: 20px;
+      font-weight: 600;
+      /* 设置消息字体粗细 */
+    }
 
-      input:focus {
-        box-shadow: 0 0 0 .25rem var(--color-primary-alpha);
-        border-color: var(--color-primary);
-        outline: 0;
-      }
+    .success {
+      background-color: #d1fae5;
+      /* 浅绿色成功消息 */
+      color: #047857;
+    }
 
-      details {
-        margin: 1rem 0 2rem;
-        border: 1px solid var(--border-color);
-        border-radius: .25rem;
-        transition: background .3s;
-      }
+    .error {
+      background-color: #fee2e2;
+      /* 浅红色错误消息 */
+      color: #b91c1c;
+    }
+  </style>
+</head>
 
-      details[open] {
-        background: #fff;
-      }
-
-      details summary {
-        padding: .5rem 1rem;
-        font-weight: 500;
-        user-select: none;
-        cursor: pointer;
-        opacity: .8;
-        outline: 0;
-      }
-
-      details div {
-        padding: 1rem;
-        border-top: 1px solid var(--border-color);
-      }
-
-      details small {
-        margin: 0;
-        font-size: .875rem;
-        line-height: 2;
-      }
-
-      button {
-        appearance: none;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-        margin-bottom: 5rem;
-        padding: .5rem .75rem;
-        border: 1px solid var(--color-primary);
-        border-radius: .25rem;
-        background: var(--color-primary);
-        color: #fff;
-        font-size: 1rem;
-        font-weight: 500;
-        line-height: inherit;
-        cursor: pointer;
-        user-select: none;
-        transition: border .3s, background .3s,;
-      }
-
-      button:hover {
-        border-color: var(--color-primary-dark);
-        background: var(--color-primary-dark);
-      }
-
-      button:focus {
-        box-shadow: 0 0 0 .25rem var(--color-primary-alpha);
-        border-color: var(--color-primary);
-        outline: 0;
-      }
-
-      button:disabled {
-        background: var(--color-primary);
-        border-color: var(--color-primary);
-        opacity: .6;
-        cursor: not-allowed;
-      }
-
-      button.loading::before {
-        content: '';
-        display: inline-block;
-        margin-right: .5rem;
-        border: 2px solid #fff;
-        border-top-color: transparent;
-        border-bottom-color: transparent;
-        border-radius: 50%;
-        width: .75rem;
-        height: .75rem;
-        animation: rotate .5s linear infinite;
-      }
-
-      footer {
-        padding: 1rem;
-        border-top: 1px solid var(--border-color);
-        text-align: center;
-        opacity: .5;
-      }
-
-      footer i {
-        font-style: normal;
-        color: #ff8787;
-      }
-
-      .success,
-      .error {
-        margin-bottom: 1rem;
-        padding: .5rem 1rem;
-        border-radius: .25rem;
-        color: #fff;
-        text-align: center;
-        opacity: 1;
-        transition: opacity .3s;
-      }
-
-      .success {
-        border: 1px solid #12b886;
-        background: #38d9a9;
-      }
-
-      .error {
-        border: 1px solid #fa5252;
-        background: #ff8787;
-      }
-
-      @keyframes rotate {
-        100% {
-          transform: rotate(360deg);
-        }
-      }
-    </style>
-  </head>
-  <body>
-    <header><h1>short</h1></header>
-    <main x-data="app" x-cloak>
-      <p x-show.transition.opacity="alert" :class="alert?.type" x-text="alert?.message"></p>
-      <input placeholder="输入要缩短的网址..." x-model="url" x-ref="url" />
-      <details>
-        <summary>自定义设置</summary>
-        <div>
-          <input placeholder="slug" x-model="slug" />
-          <small>Slug 默认是随机生成的短 id。</small>
+<body>
+  <main>
+    <div class="container">
+      <h1 class="text-3xl font-bold text-gray-800">一只会飞的旺旺</h1>
+      <div x-data="app" x-cloak>
+        <p x-show.transition.opacity="alert" :class="alert?.type" x-text="alert?.message"></p>
+        <div class="mb-4">
+          <input placeholder="输入要缩短的网址..." x-model="url" x-ref="url"
+            class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:shadow-outline" />
         </div>
-      </details>
-      <button :class="{ loading }" :disabled="loading || isValidated()" @click="submit($refs, $nextTick)">生成</button>
-    </main>
-    <footer>
-     service
-    </footer>
-    <script src="asset/js/alpine.js"></script>
-    <script>
-      const app = {
-        url: '',
-        slug: '',
-        alert: null,
-        loading: false,
-        isValidated () {
-          return !/^https?:\/\/.{3,}/.test(this.url)
-        },
-        submit ($refs, $nextTick) {
-          if (!this.url) {
-            this.alert = { type: 'error', message: '缺少必需的参数：url。' }
-            return
-          }
+        <!-- 在 x-data="app" 下的 input url 后添加 -->
+        <div class="mb-4">
+          <input type="password" 
+                placeholder="请输入访问密码..." 
+                x-model="password"
+                class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:shadow-outline" />
+        </div>
+        <details class="mb-4 border border-gray-300 rounded-md">
+          <summary class="px-4 py-2 cursor-pointer font-medium">自定义设置</summary>
+          <div class="px-4 py-2">
+            <input placeholder="自定义短链接 (可选)" x-model="slug"
+              class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:shadow-outline" />
+            <div class="mt-2">
+              <label for="expiry" class="block text-sm font-medium text-gray-700">过期时间 (可选):</label>
+              <select id="expiry" x-model="expiry"
+                class="mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm rounded-md">
+                <option value="">永不过期</option>
+                <option value="5m">5 分钟</option>
+                <option value="1h">1 小时</option>
+                <option value="12h">12 小时</option>
+                <option value="1d">1 天</option>
+                <option value="7d">1 周</option>
+              </select>
+            </div>
+          </div>
+        </details>
+        <button :class="{ loading }" :disabled="loading || isValidated()" @click="submit($refs, $nextTick)"
+          class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
+          生成
+        </button>
+      </div>
+    </div>
+  </main>
+  <footer class="text-gray-600">
+      <a href="https://www.wangwangit.com">一只会飞的旺旺</a>
+  </footer>
 
-          if (this.isValidated()) {
-            this.alert = { type: 'error', message: '非法格式：url。' }
-            return
-          }
-
-          this.alert = null
-          this.loading = true
-
-          const body = { url: this.url }
-          if (this.slug) body.slug = this.slug
-
-          fetch('/create', {
-            method: 'post',
-            headers: { 'content-type': 'application/json' },
-            body: JSON.stringify(body)
-          })
-            .then(res => res.json())
-            .then(res => {
-              this.loading = false
-              if (res.message) {
-                this.alert = { type: 'error', message: res.message }
-                return
-              }
-
-              this.url = res.link
-
-              $nextTick(() => {
-                $refs.url.select()
-                this.alert = { type: 'success', message: `链接 ${document.execCommand('Copy') ? '复制' : '生成'} ` }
-              })
-            })
-            .catch(e => {
-              this.alert = { type: 'error', message: e.message }
-              this.loading = false
-            })
+  <script src="asset/js/alpine.js"></script>
+  <script>
+    const app = {
+      url: '',
+      slug: '',
+      expiry: '', // 添加过期时间属性
+      password: '', // 添加访问密码属性
+      alert: null,
+      loading: false,
+      isValidated() {
+        return !/^https?:\/\/.{3,}/.test(this.url)
+      },
+      submit($refs, $nextTick) {
+        if (!this.url) {
+          this.alert = { type: 'error', message: '缺少必需的参数：url。' }
+          return
         }
+        
+        if (!this.password) {
+          this.alert = { type: 'error', message: '请输入访问密码。' }
+          return
+        }
+
+        if (this.isValidated()) {
+          this.alert = { type: 'error', message: '非法格式：url。' }
+          return
+        }
+
+        this.alert = null
+        this.loading = true
+
+
+        const body = { 
+      url: this.url, 
+      slug: this.slug, 
+      expiry: this.expiry,
+      password: this.password 
+    }
+
+        fetch('/create', {
+          method: 'post',
+          headers: { 'content-type': 'application/json' },
+          body: JSON.stringify(body)
+        })
+          .then(res => res.json())
+          .then(res => {
+            this.loading = false
+            if (res.message) {
+              this.alert = { type: 'error', message: res.message }
+              return
+            }
+
+            this.url = res.link
+
+            $nextTick(() => {
+              $refs.url.select()
+              this.alert = { type: 'success', message: `链接 ${document.execCommand('Copy') ? '复制' : '生成'} ` }
+            })
+          })
+          .catch(e => {
+            this.alert = { type: 'error', message: e.message }
+            this.loading = false
+          })
       }
-    </script>
-  </body>
+    }
+  </script>
+</body>
+
 </html>
