Update header text in index.html

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 <body>
   <main>
     <div class="container">
-      <h1 class="text-3xl font-bold text-gray-800">一只会飞的旺旺</h1>
+      <h1 class="text-3xl font-bold text-gray-800">星漫旅站</h1>
       <div x-data="app" x-cloak>
         <p x-show.transition.opacity="alert" :class="alert?.type" x-text="alert?.message"></p>
         <div class="mb-4">
