--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="asset/img/favicon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>一只会飞的旺旺 - URL缩短服务</title>
+  <title>星漫旅站 - URL缩短服务</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.16/dist/tailwind.min.css">
   <style>
     * {
@@ -320,8 +320,8 @@
     <div class="header-content">
       <div class="logo">一只会飞的旺旺</div>
       <div class="header-links">
-        <a href="https://www.wangwangit.com">首页</a>
-        <a href="#about">关于</a>
+        <a href="https://blog.110995.xyz/">博客</a>
+        <a href="https://nav.12388888.xyz/">书签</a>
       </div>
     </div>
   </header>
@@ -390,7 +390,7 @@
 
   <!-- 页脚 -->
   <footer>
-    <p>© 2024 <a href="https://www.wangwangit.com">一只会飞的旺旺</a> · 快速、安全、可靠的URL缩短服务</p>
+    <p>© 2025 <a href="https://page.110995.xyz/">星漫旅站</a> · 快速、安全、可靠的URL缩短服务</p>
   </footer>
 
   <script src="asset/js/alpine.js"></script>
