--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
   <!-- 页面头部 -->
   <header class="header">
     <div class="header-content">
-      <div class="logo">一只会飞的旺旺</div>
+      <div class="logo">星漫旅站</div>
       <div class="header-links">
         <a href="https://blog.110995.xyz/">博客</a>
         <a href="https://nav.12388888.xyz/">书签</a>
