--- a/index.html
+++ b/index.html
@@ -14,11 +14,18 @@
       box-sizing: border-box;
     }
 
+    html,
+    body {
+      height: 100%;
+    }
+
     body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Microsoft YaHei', sans-serif;
       background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
       min-height: 100vh;
       color: #333;
+      display: flex;
+      flex-direction: column;
     }
 
     .header {
@@ -30,6 +37,7 @@
       top: 0;
       z-index: 100;
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+      flex-shrink: 0;
     }
 
     .header-content {
@@ -69,6 +77,8 @@
       grid-template-columns: 1fr 1fr;
       gap: 40px;
       align-items: center;
+      flex: 1;
+      width: 100%;
     }
 
     .hero-section {
@@ -259,7 +269,7 @@
       border-top: 1px solid rgba(0, 0, 0, 0.08);
       padding: 30px 20px;
       text-align: center;
-      margin-top: 60px;
+      flex-shrink: 0;
     }
 
     footer a {
