--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         <input type="url" id="url" placeholder="https://example.com" required>
       </div>
       <div class="form-group">
-        <label for="slug">自定义短链标识 (可选)</label>
-        <input type="text" id="slug" placeholder="abcd" maxlength="10">
+        <label for="slug" style="color: black !important;">自定义短链标识</label>
+        <input type="text" id="slug" placeholder="abcd(2-10位字符)" maxlength="10">
       </div>
       <div class="checkbox-group">
         <input type="checkbox" id="enablePassword">
@@ -71,7 +71,7 @@
       </div>
       <div id="customExpireField" class="form-group hidden-field">
         <label for="customMinutes">自定义分钟数</label>
-        <input type="number" id="customMinutes" placeholder="60" min="1">
+        <input type="number" id="customMinutes" placeholder="60分钟" min="1">
       </div>
       <button type="submit">
         <span class="loading" id="loading">⏳ 生成中...</span>
