--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <h1>🔗 短链生成器</h1>
     <form id="shortenerForm">
       <div class="form-group">
-        <label for="url">目标 URL</label>
+        <label for="url"style="color: black !important;"> 目标 URL</label>
         <input type="url" id="url" placeholder="https://example.com" required>
       </div>
       <div class="form-group">
