--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <input type="password" id="password" placeholder="输入密码">
       </div>
       <div class="form-group">
-        <label for="expireType">⏰ 过期时间</label>
+        <label for="expireType"style="color: black !important;">⏰ 过期时间</label>
         <select id="expireType">
           <option value="never">永不过期</option>
           <option value="hour">1小时</option>
@@ -59,7 +59,7 @@
         </select>
       </div>
       <div id="customExpireField" class="form-group hidden-field">
-        <label for="customMinutes">自定义分钟数</label>
+        <label for="customMinutes"style="color: black !important;">自定义分钟数</label>
         <input type="number" id="customMinutes" placeholder="60分钟" min="1">
       </div>
       <button type="submit">
