Update placeholder text for slug input field

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </div>
       <div class="form-group">
         <label for="slug" style="color: black !important;">自定义短链标识</label>
-        <input type="text" id="slug" placeholder="abcd(2-10位字符)" maxlength="10">
+        <input type="text" id="slug" placeholder="请输入2-10位字符" maxlength="10">
       </div>
       <div class="checkbox-group">
         <input type="checkbox" id="enablePassword">
