--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
   <title>短链生成器</title>
   <style>
     * { box-sizing: border-box; }
-    body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; margin: 0; padding: 2rem; /* 仅修改这行背景渐变 */ background: linear-gradient(135deg, #1a2980 0%, #26d0ce 100%); min-height: 100vh; }
+    body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; margin: 0; padding: 2rem; /* 高级紫粉渐变背景 */ background: linear-gradient(135deg, #d299c2 0%, #fef9d7 100%); min-height: 100vh; }
     .container { max-width: 600px; margin: 0 auto; }
-    h1 { text-align: center; color: white; margin-bottom: 2rem; font-size: 2.5rem; }
+    h1 { text-align: center; color: white; margin-bottom: 2rem; font-size: 2.5rem; text-shadow: 0 2px 4px rgba(0,0,0,0.1); }
     .form-group { margin-bottom: 1.5rem; }
+    /* 全局label样式（非表单内） */
     label { display: block; margin-bottom: 0.5rem; color: white; font-weight: 500; }
+    /* 修复：表单内label改为深色，避免白色背景看不清 */
+    #shortenerForm label { color: #333; }
     input, select { width: 100%; padding: 0.75rem; border: none; border-radius: 8px; font-size: 1rem; }
     .hidden-field { display: none; }
     .hidden-field.show { display: block; }
@@ -48,7 +51,7 @@
       </div>
       <div class="form-group">
         <label for="slug">自定义短链标识 (可选)</label>
-        <input type="text" id="slug" placeholder="abcd" maxlength="10">
+        <input type="text" id="slug" placeholder="请输入2~10个字符哦！" maxlength="10">
       </div>
       <div class="checkbox-group">
         <input type="checkbox" id="enablePassword">
@@ -71,7 +74,7 @@
       </div>
       <div id="customExpireField" class="form-group hidden-field">
         <label for="customMinutes">自定义分钟数</label>
-        <input type="number" id="customMinutes" placeholder="60" min="1">
+        <input type="number" id="customMinutes" placeholder="60分钟" min="1">
       </div>
       <button type="submit">
         <span class="loading" id="loading">⏳ 生成中...</span>
