--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
     <h1>🔗 短链生成器</h1>
     <form id="shortenerForm">
       <div class="form-group">
-        <label for="url">目标 URL</label>
+        <label for="url">📎目标 URL*</label>
         <input type="url" id="url" placeholder="https://example.com" required>
       </div>
       <div class="form-group">
-        <label for="slug">自定义短链标识 (可选)</label>
+        <label for="slug">📎自定义短链标识 (可选)</label>
         <input type="text" id="slug" placeholder="请输入2~10位字符哦！" maxlength="10">
       </div>
       <div class="checkbox-group">
